--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -14,7 +14,6 @@ http://www.tooplate.com/view/2102-constructive
 	list-style:none}
 	li a {
   display: block;
-
   color: white;
   text-align: center;
   padding: 10px;
@@ -37,6 +36,12 @@ body {
     height: 100%;
     position: relative;
     background: #222222;
+}
+
+}
+
+
+
 }
 
 #preload-01 { background: url(../img/constructive_bg_01.jpg) no-repeat -9999px -9999px; }
